# napari-decode

./: LICENSE  README.md  setup.cfg  tox.ini
src/napari_decode/: __init__.py  controller.py  model.py  napari.yaml  view.py
src/napari_decode/simulation/: widgets.py
