[metadata]
name = napari-decode
version = 0.0.1
author = Greg M. Fleishman
author_email = fleishmang@janelia.hhmi.org
url = https://github.com/gfleishman/napari-decode
license = MIT
description = DECODE for SMLM processing
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
project_urls =
    Bug Tracker = https://github.com/gfleishman/napari-decode/issues
    Documentation = https://github.com/gfleishman/napari-decode#README.md
    Source Code = https://github.com/gfleishman/napari-decode
    User Support = https://github.com/gfleishman/napari-decode/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
package_dir =
    =src

# add your package requirements here
install_requires =
    numpy


[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/


[options.packages.find]
where = src

[options.package_data]
* = *.yaml

[options.entry_points]
napari.manifest =
    napari-decode = napari_decode:napari.yaml
