[metadata]
name = napari_decode
version = 0.0.1
description = DECODE for SMLM processing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gfleishman/napari-decode
author = Greg M. Fleishman
author_email = fleishmang@janelia.hhmi.org
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Testing
project_urls =
    Bug Tracker = https://github.com/gfleishman/napari-decode/issues
    Documentation = https://github.com/gfleishman/napari-decode#README.md
    Source Code = https://github.com/gfleishman/napari-decode
    User Support = https://github.com/gfleishman/napari-decode/issues

[options]
packages = find:
install_requires =
    magicgui
    napari
    numpy
python_requires = >=3.8
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-decode = napari_decode:napari.yaml

[options.extras_require]
testing =
    pytest
    pytest-cov
    tox

[options.package_data]
* = *.yaml
